Change log for zeit.web
=======================

2.34 (unreleased)
-----------------

- MAINT: Use `requests` throughout, no more `urllib2.urlopen`

- PERF: Disable `requests` trying to read credentials from `~/.netrc`,
  saving quite a few superfluous disk accesses

- ZON-2408: Add overscroll effect

- MAINT: Polish nextread, advertising nextread and article lineage

- HOTFIX: Handle non-ascii author names in author feed

- ZON-2462: Connect friedbert to new author object

- MAINT: Use time-based caching for video series source


2.33 (2015-11-27)
-----------------

- ZON-2352: Add liveglog teaser icon

- ZON-2357: Add Supertitle to Article Lineage

- ZON-2415: Add Zett Banner

- ZON-2355: Hide chronological article navigation covering fullwidth elements

- ZON-2369: Mark comments by freelancer

- ZON-2418: Update webtrekk page parameter 10

- ZON-2354: Remove vertical spacing of regions where unneeded

- ZON-2445: Change twitter shares to mostread in ZMO buzzboard

- MAINT: Add noindex header to XHR views (just to be on the safe side)

- MAINT: Polish nextread, advertising nextread and article lineage


2.32.1 (2015-11-27)
-------------------

- HOTFIX: Fix shop carousel teaser uniqueId


2.32 (2015-11-24)
-----------------

- HOTFIX: Style adlabels for iqd 2


2.31 (2015-11-24)
-----------------

- HOTFIX: Style adlabels for iqd

- ZON-2347: Shop carousel: consolidate two teaser links into one

- ZON-2421: Framebuilder - first steps

- ZON-2353: Adapt wording in Jobteaser

- ZON-1601: Add mobile TOC

- FIX: Style ZMO/zett icons on topicteaser

- FIX: Remove padding from ZMO parquet

- FIX: Correct query for author feed


2.30 (2015-11-23)
-----------------

- DEV-752: Prepare spektrum feed to use category supertitle

- ZON-2395: IVW-Verpixelung for video plays

- ZON-2413: Disect default teaser sticker edgecasing, handle feature longforms

- ZON-2414: Use pagetitle in twitter:title meta tag

- ZON-2404: Show comment replies in ZMO
