@@ -1,0 +1,8 @@
+def test_author_page_should_show_favourite_content_if_available(testbrowser):
+    browser = testbrowser('/autoren/j_random')
+    assert len(browser.cssselect('.cp-area--ranking .teaser-small')) == 3
+
+
+def test_author_page_should_hide_favourite_content_if_missing(testbrowser):
+    browser = testbrowser('/autoren/anne_mustermann')
+    assert len(browser.cssselect('.cp-area--ranking .teaser-small')) == 0
