@@ -4,6 +4,8 @@ Change log for zeit.web
 2.34 (unreleased)
 -----------------
 
+- ZON-2469: Embed favourite content into author profile page
+
 - MAINT: Use `requests` throughout, no more `urllib2.urlopen`
 
 - PERF: Disable `requests` trying to read credentials from `~/.netrc`,
